spec/e2e/import/syntax_error_on_imported_file.lit
import '../../fixtures/syntax_error.lit' # error: [syntax_error.lit:2] Syntax error at "1": I was expecting a variable name here.
